--- a/templates/config/index.html
+++ b/templates/config/index.html
@@ -3,4 +3,5 @@
 {% block content %}
 
 <a href="https://bobtenshi.work/"><button type="button" class="btn btn-primary">Who is bobtnshi</button></a>
+<a href="bss/"><button type="button" class="btn btn-primary">BSS experience</button></a>
 {% endblock %}
