--- a/config/templates/bss/base.html
+++ b/config/templates/bss/base.html
@@ -28,6 +28,15 @@
   {% block content %}
   {% endblock %}
 
+  <!-- フッター -->
+
+  <div class="row justify-content-center mt-4 mb-4">
+    <div class="col-12 d-flex justify-content-center">
+      <div class="text_center">
+        This app is built with Django.
+      </div>
+    </div>
+  </div>
 
   <!--<div class="container">
     <div class="card">
