fix: check boxの見た目

--- a/config/templates/bss/index.html
+++ b/config/templates/bss/index.html
@@ -76,16 +76,16 @@
       {% csrf_token %}
       <label for="check-1">
         <input type="checkbox" name="nameSelectedSources" value=1 data-target="foo" class="ch1" checked>
-        <div class="check_box_scripts">audio1</div>
-      </label>
+        audio1
+      </label><br>
 
       <label for="check-1">
         <input type="checkbox" name="nameSelectedSources" value=2 data-target="foo" class="ch1" checked>
-        <div class="check_box_scripts">audio2</div>
-      </label>
+        audio2
+      </label><br>
       <label for="check-1">
         <input type="checkbox" name="nameSelectedSources" value=3 data-target="foo" class="ch1">
-        <div class="check_box_scripts">audio3</div>
+        audio3
       </label><br>
       <label>
         <input class="btn" type="submit" value="決定">
