--- a/config/templates/bss/bss_result.html
+++ b/config/templates/bss/bss_result.html
@@ -1,4 +1,5 @@
 {% load static %}
+<hr>
 
 <div class="container">
   <div class="row d-flex justify-content-center mb-4">
@@ -12,7 +13,9 @@
 <div class="container">
   <div class="row justify-content-center mt-4 mb-4">
     <p style="text-align:center" class="col-12 subtitle">Separated sources</p>
+  </div>
 
+  <div class="row justify-content-center mt-4 mb-4">
     <div class="col-lg-4 d-flex justify-content-center">
       <figure>
         <figcaption>Listen to the audio1:</figcaption>
@@ -22,7 +25,10 @@
         </audio>
       </figure>
     </div>
+  </div>
 
+
+  <div class="row justify-content-center mt-4 mb-4">
     <div class="col-lg-4 d-flex justify-content-center">
       <figure>
         <figcaption>Listen to the audio2:</figcaption>
@@ -33,15 +39,15 @@
       </figure>
     </div>
   </div>
-</div>
 
-<hr>
-<hr>
+
+</div>
+</div>
 
 <div class="container mt-5 mb-5">
   <div class="row d-flex justify-content-center">
     <div id="bss_content">
-      End
+      <hr>
     </div>
   </div>
 </div>
