fix: work on AWS!!!!!!

--- a/config/templates/config/index.html
+++ b/config/templates/config/index.html
@@ -2,6 +2,6 @@
 {% load static %}
 {% block content %}
 
-<a href="https://bobtenshi.work/"><button type="button" class="btn btn-primary">Who is bobtnshi</button></a>
-<a href="bss/"><button type="button" class="btn btn-primary">BSS experience</button></a>
+<a href="https://bobtenshi.work/"><button type="button" class="btn btn-primary">My profile</button></a>
+<a href="bss/"><button type="button" class="btn btn-primary">BSS demo</button></a>
 {% endblock %}
