--- a/config/templates/bss/base.html
+++ b/config/templates/bss/base.html
@@ -33,7 +33,7 @@
   <div class="row justify-content-center mt-4 mb-4">
     <div class="col-12 d-flex justify-content-center">
       <div class="text_center">
-        This app is built with Django.
+        This app is made with Django.
       </div>
     </div>
   </div>
