--- a/config/templates/bss/bss_result.html
+++ b/config/templates/bss/bss_result.html
@@ -18,7 +18,7 @@
   <div class="row justify-content-center mt-4 mb-4">
     <div class="col-lg-4 d-flex justify-content-center">
       <figure>
-        <figcaption>Listen to the audio1:</figcaption>
+        <figcaption>Listen to the separated audio1:</figcaption>
         <audio controls src="{% static 'audio/separate/sep1.wav' %}">
           Your browser does not support the
           <code>audio</code> element.
@@ -31,7 +31,7 @@
   <div class="row justify-content-center mt-4 mb-4">
     <div class="col-lg-4 d-flex justify-content-center">
       <figure>
-        <figcaption>Listen to the audio2:</figcaption>
+        <figcaption>Listen to the separated audio2:</figcaption>
         <audio controls src="{% static 'audio/separate/sep2.wav' %}">
           Your browser does not support the
           <code>audio</code> element.
